--- a/hello-electron/src/pages/sub-window.html
+++ b/hello-electron/src/pages/sub-window.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ElectronApp</title>
+    <title>SubWindow</title>
   </head>
   <body>
-    <h1>Hello ElectronApp</h1>
+    sub window
   </body>
 </html>
